# BackendBench

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE.md  OPERATOR_MAPPINGS.md  README.md  README_RESEARCHER_WORKFLOW.md  Torchbench.md  VLLM_PROTOTYPE_README.md  backend_bench_problems.parquet  core_torchbench_ops.py  create_watermarked_operators.py  debug_eval_perf.py  debug_relu_perf.py  internal_operators.csv  log.txt  output.txt  pyproject.toml  pytest.ini  pytorch_operator_coverage_analysis.md  requirements-dev.txt  requirements-vllm.txt  requirements.txt  run.sh  run_core_ops.sh  run_single_op.sh  setup_operator_directories.py
.github/: CODEOWNERS
BackendBench/: __init__.py  agent_errors.py  backends.py  backwards_utils.py  constants.py  conversation_manager.py  data_loaders.py  distributed_workers.py  errors.py  eval.py  eval_model.py  eval_multiprocessing.py  facto_suite.py  kernel_templates.py  llm_client.py  llm_eval.py  multiprocessing_eval.py  op_categories.py  op_mapper.py  opinfo_suite.py  opregistry.py  output.py  power.py  prompts.py  score.py  suite.py  torchbench_suite.py  train.py  utils.py  vllm_backend.py
BackendBench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aten_output/: failed_ops.json  full_results.json  operator_summary.csv
backendbench_output_20250828_170242/: README.md  failed_ops.json  full_results.json  operator_summary.csv
backendbench_output_20250828_171408/: README.md  failed_ops.json  full_results.json  operator_summary.csv
backendbench_output_20250829_205959/: README.md  failed_ops.json  full_results.json  operator_summary.csv
docs/: correctness.md  custom_ops.md
examples/: op_mapper_example.py  simple_kernel_eval.py
flaggems_output/: failed_ops.json  full_results.json  operator_summary.csv
generated_kernels/: any_summary.txt  bitwise_and_summary.txt  bitwise_not_summary.txt  bitwise_xor_summary.txt  clamp_min_summary.txt  clamp_summary.txt  div__summary.txt  div_summary.txt  elu_summary.txt  eq_summary.txt  erf_summary.txt  exp_summary.txt  fill__summary.txt  floor_summary.txt  ge_summary.txt  gelu_backward_summary.txt  gelu_summary.txt  gt_summary.txt  hardsigmoid_backward_summary.txt  hardsigmoid_summary.txt  hardswish__summary.txt  hardswish_backward_summary.txt  hardswish_summary.txt  hardtanh__summary.txt  hardtanh_backward_summary.txt  hardtanh_summary.txt  isinf_summary.txt  isnan_summary.txt  le_summary.txt  leaky_relu__summary.txt  leaky_relu_backward_summary.txt  lt_summary.txt  (+40 more)
(+1031 files in other folders)
