[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backendbench"
version = "0.1.0"
description = "A PyTorch backend evaluation suite"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "click>=8.0.0",
    "anthropic>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "ruff>=0.1.0",
    "black>=22.0.0",
]
flaggems = [
    "flag_gems",
]

[project.scripts]
backendbench = "BackendBench.scripts.main:cli"

[tool.setuptools.packages.find]
include = ["BackendBench*"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
